feat: include entity metadata in search endpoint responses #651
